--- a/video-bieber-zeikt-op-schoonmakers.html
+++ b/video-bieber-zeikt-op-schoonmakers.html
@@ -29,7 +29,7 @@
       <body class="bieberfever">
          <div id="topbar">
             <ul>
-               <li class="active">Bieber Fever</li><li><a href="http://www.iphonenieuws.com">iPhone Nieuws</a></li><li><a href="http://www.androidnieuws.com">Android Nieuws</a></li><li><a href="http://www.blackberrynieuws.com">BlackBerry Nieuws</a></li><li><a href="http://www.nokianieuws.com">Nokia Nieuws</a></li>               <li class="right"><script>var d=new Date();
+               <li class="active">Bieber Fever</li>               <li class="right"><script>var d=new Date();
 var month=new Array();
 month[0]="januari";
 month[1]="februari";
@@ -80,7 +80,7 @@ document.write(d.getFullYear());
  <div id="disqus_thread" itemscope itemtype="http://schema.org/UserComments"></div>
 <script type="text/javascript">
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-var disqus_shortname = 'bieberfever'; // required: replace example with your forum shortname
+var disqus_shortname = 'bieberfevernl'; // required: replace example with your forum shortname
 
 /* * * DON'T EDIT BELOW THIS LINE * * */
 (function() {
