--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	 <meta name="keywords" content="Justin, Justin Bieber, Bieber, JB, music" />
 	 <meta name="author" content="bieberfever.nl" />
          <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-         <script src="http://www.iphonenieuws.com/js/scripts.js" type="text/javascript"></script>
+         <script src="js/scripts.js" type="text/javascript"></script>
          <script type="text/javascript">
             WebFontConfig = {
                google: { families: [ 'Magra:400' ] },
@@ -30,12 +30,12 @@
                s.parentNode.insertBefore(wf, s);
             })();
          </script>
-         <link rel="stylesheet" href="http://www.iphonenieuws.com/css/stylesheet.css" type="text/css" />
+         <link rel="stylesheet" href="css/stylesheet.css" type="text/css" />
       </head>
       <body class="bieberfever">
          <div id="topbar">
             <ul>
-               <li class="active">Bieber Fever</li><li><a href="http://www.iphonenieuws.com">iPhone Nieuws</a></li><li><a href="http://www.androidnieuws.com">Android Nieuws</a></li><li><a href="http://www.blackberrynieuws.com">BlackBerry Nieuws</a></li><li><a href="http://www.nokianieuws.com">Nokia Nieuws</a></li>               <li class="right"><script>var d=new Date();
+               <li class="active">Bieber Fever</li>               <li class="right"><script>var d=new Date();
 var month=new Array();
 month[0]="januari";
 month[1]="februari";
