--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
          </script>
          <link rel="stylesheet" href="css/stylesheet.css" type="text/css" />
       </head>
-      <body class="bieberfever">
-         <div id="topbar">
+      <body class="bieberfever"><img src="images/background.jpg" id="background" alt="Justin Bieber" />   <div id="topbar">
             <ul>
                <li class="active">Bieber Fever</li>               <li class="right"><script>var d=new Date();
 var month=new Array();
