--- a/bill-clinton-vergeeft-justin-bieber-na-belediging.html
+++ b/bill-clinton-vergeeft-justin-bieber-na-belediging.html
@@ -76,7 +76,7 @@ Een filmpje waarin Justin Bieber Clinton beledigt, dook gisteren op. De 19-jarig
  <div id="disqus_thread" itemscope itemtype="http://schema.org/UserComments"></div>
 <script type="text/javascript">
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-var disqus_shortname = 'bieberfevernl'; // required: replace example with your forum shortname
+var disqus_shortname = 'bieberfeverdotnl'; // required: replace example with your forum shortname
 
 /* * * DON'T EDIT BELOW THIS LINE * * */
 (function() {
