--- a/justin-bieber-en-selena-gomez-weer-samen.html
+++ b/justin-bieber-en-selena-gomez-weer-samen.html
@@ -128,7 +128,7 @@ Desondanks wordt al enige tijd gesproken dat Gomez de enige is die de kleine tie
  <div id="disqus_thread" itemscope itemtype="http://schema.org/UserComments"></div>
 <script type="text/javascript">
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-var disqus_shortname = 'bieberfevernl'; // required: replace example with your forum shortname
+var disqus_shortname = 'bieberfeverdotnl'; // required: replace example with your forum shortname
 
 /* * * DON'T EDIT BELOW THIS LINE * * */
 (function() {
