--- a/justin-bieber-mag-bier-drinken-van-selena.html
+++ b/justin-bieber-mag-bier-drinken-van-selena.html
@@ -71,7 +71,7 @@ De invloed van Selena Gomez op de losbandige Justin Bieber lijkt beperkt. TMZ he
  <div id="disqus_thread" itemscope itemtype="http://schema.org/UserComments"></div>
 <script type="text/javascript">
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-var disqus_shortname = 'bieberfevernl'; // required: replace example with your forum shortname
+var disqus_shortname = 'bieberfeverdotnl'; // required: replace example with your forum shortname
 
 /* * * DON'T EDIT BELOW THIS LINE * * */
 (function() {
