--- a/justin-bieber-spuwt-opnieuw-man-in-het-gezicht.html
+++ b/justin-bieber-spuwt-opnieuw-man-in-het-gezicht.html
@@ -75,7 +75,7 @@ Twee van de bodyguards van de zanger zouden naar de man zijn gestapt, omdat ze d
  <div id="disqus_thread" itemscope itemtype="http://schema.org/UserComments"></div>
 <script type="text/javascript">
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-var disqus_shortname = 'bieberfevernl'; // required: replace example with your forum shortname
+var disqus_shortname = 'bieberfeverdotnl'; // required: replace example with your forum shortname
 
 /* * * DON'T EDIT BELOW THIS LINE * * */
 (function() {
