--- a/justin-bieber-verrast-selena-gomez-met-roos.html
+++ b/justin-bieber-verrast-selena-gomez-met-roos.html
@@ -63,7 +63,7 @@ MALIBU - Selena Gomez was zaterdag met vrienden aan het feesten toen een onverwa
  <div id="disqus_thread" itemscope itemtype="http://schema.org/UserComments"></div>
 <script type="text/javascript">
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-var disqus_shortname = 'bieberfevernl'; // required: replace example with your forum shortname
+var disqus_shortname = 'bieberfeverdotnl'; // required: replace example with your forum shortname
 
 /* * * DON'T EDIT BELOW THIS LINE * * */
 (function() {
