--- a/justin-rotjong-bieber-plast-in-keuken-van-restaurant.html
+++ b/justin-rotjong-bieber-plast-in-keuken-van-restaurant.html
@@ -74,7 +74,7 @@ In een gelekte video is te zien hoe Justin Bieber samen met enkele vrienden de k
  <div id="disqus_thread" itemscope itemtype="http://schema.org/UserComments"></div>
 <script type="text/javascript">
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-var disqus_shortname = 'bieberfevernl'; // required: replace example with your forum shortname
+var disqus_shortname = 'bieberfeverdotnl'; // required: replace example with your forum shortname
 
 /* * * DON'T EDIT BELOW THIS LINE * * */
 (function() {
