--- a/moeder-bieber-zoon-niet-perfect.html
+++ b/moeder-bieber-zoon-niet-perfect.html
@@ -72,7 +72,7 @@ document.write(d.getFullYear());
  <div id="disqus_thread" itemscope itemtype="http://schema.org/UserComments"></div>
 <script type="text/javascript">
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-var disqus_shortname = 'bieberfevernl'; // required: replace example with your forum shortname
+var disqus_shortname = 'bieberfeverdotnl'; // required: replace example with your forum shortname
 
 /* * * DON'T EDIT BELOW THIS LINE * * */
 (function() {
