--- a/nieuwe-album-cody-simpson-heet-surfers-paradise.html
+++ b/nieuwe-album-cody-simpson-heet-surfers-paradise.html
@@ -103,7 +103,7 @@ Cody Simpson tourde vorig jaar en voorjaar 2013 door Europa. Hij verzorgde ook h
  <div id="disqus_thread" itemscope itemtype="http://schema.org/UserComments"></div>
 <script type="text/javascript">
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-var disqus_shortname = 'bieberfevernl'; // required: replace example with your forum shortname
+var disqus_shortname = 'bieberfeverdotnl'; // required: replace example with your forum shortname
 
 /* * * DON'T EDIT BELOW THIS LINE * * */
 (function() {
