--- a/selena-gomez-bolt-het-af-na-lastige-vraag-over-bieber.html
+++ b/selena-gomez-bolt-het-af-na-lastige-vraag-over-bieber.html
@@ -72,7 +72,7 @@ Toegegeven, de tendentieuze vraag lokte Selena wel aardig uit haar kot. "Jij ben
  <div id="disqus_thread" itemscope itemtype="http://schema.org/UserComments"></div>
 <script type="text/javascript">
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-var disqus_shortname = 'bieberfevernl'; // required: replace example with your forum shortname
+var disqus_shortname = 'bieberfeverdotnl'; // required: replace example with your forum shortname
 
 /* * * DON'T EDIT BELOW THIS LINE * * */
 (function() {
