--- a/selena-gomez-leerde-van-relatie-met-justin.html
+++ b/selena-gomez-leerde-van-relatie-met-justin.html
@@ -63,7 +63,7 @@ LONDEN - Selena Gomez heeft in een interview met Ryan Seacrest voor E! News toeg
  <div id="disqus_thread" itemscope itemtype="http://schema.org/UserComments"></div>
 <script type="text/javascript">
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-var disqus_shortname = 'bieberfevernl'; // required: replace example with your forum shortname
+var disqus_shortname = 'bieberfeverdotnl'; // required: replace example with your forum shortname
 
 /* * * DON'T EDIT BELOW THIS LINE * * */
 (function() {
