--- a/trixie-whitley-covert-justin-bieber.html
+++ b/trixie-whitley-covert-justin-bieber.html
@@ -68,7 +68,7 @@ Trixie Whitley zong vanmorgen een cover op het radioprogramma van de Nederlandse
  <div id="disqus_thread" itemscope itemtype="http://schema.org/UserComments"></div>
 <script type="text/javascript">
 /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-var disqus_shortname = 'bieberfevernl'; // required: replace example with your forum shortname
+var disqus_shortname = 'bieberfeverdotnl'; // required: replace example with your forum shortname
 
 /* * * DON'T EDIT BELOW THIS LINE * * */
 (function() {
